--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -17,7 +17,7 @@
     <None Update="2024\inputs\day03.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="2024\inputs\Day04.txt">
+    <None Update="2024\inputs\day04.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="2024\inputs\day05.txt">
