--- a/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -25,4 +25,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="2024\solutions.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
